[gd_scene load_steps=9 format=3 uid="uid://di0qkftqlht48"]

[ext_resource type="Script" path="res://Scripts/lvl_comp_popup.gd" id="1_veofr"]
[ext_resource type="Texture2D" uid="uid://dbq7eq5pqfskf" path="res://Assets/Check-dr1.png" id="2_mytte"]
[ext_resource type="AudioStream" uid="uid://bo3k4rhwil3yv" path="res://Audio/LeevelTransitionDraft1.mp3" id="3_3muot"]
[ext_resource type="AudioStream" uid="uid://b7ndrk2hfyon3" path="res://Audio/success-fanfare-trumpets-6185.mp3" id="4_wf3a1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fdj2o"]
bg_color = Color(0.211765, 0.211765, 0.211765, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.309804)
shadow_size = 7
shadow_offset = Vector2(15, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f86yi"]
bg_color = Color(0.396078, 0.14902, 0.776471, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5kmj"]
bg_color = Color(0.529412, 0.321569, 0.952941, 0.862745)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e30n7"]
bg_color = Color(0.247059, 0.0705882, 0.505882, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5

[node name="Lvl_Comp_Popup" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -209.5
offset_right = 312.0
offset_bottom = 209.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fdj2o")
script = ExtResource("1_veofr")

[node name="Next" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = 27.5
offset_right = 195.0
offset_bottom = 287.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_f86yi")
theme_override_styles/hover = SubResource("StyleBoxFlat_x5kmj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_e30n7")
icon = ExtResource("2_mytte")
icon_alignment = 1

[node name="Popop_text" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -158.0
offset_right = 251.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 55
text = "LEVEL COMPLETE!"

[node name="Audio" type="Node2D" parent="."]

[node name="ClickSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("3_3muot")
attenuation = 0.000106267

[node name="WinSound" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("4_wf3a1")
attenuation = 0.00285954

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="finished" from="Audio/ClickSound" to="." method="_on_click_sound_finished"]
